Safari365 Prod/src/objects/Consultant_Target_Lead_Monthly__c.object
<CustomObject>
    <fields>
        <fullName>Consultant_Leads_Target__c</fullName>
        <label>Number of Leads Required (Monthly)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Level</label>
        <referenceTo>Consultant_Target_Schema__c</referenceTo>
        <relationshipName>Consultant_Target_Lead_Monthly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant_Target_Lead_Achieved__c</fullName>
        <inlineHelpText>This will automatically populate based on leads assigned, no need to enter details here</inlineHelpText>
        <label>Number of Leads Received (Monthly)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultant_Target_Lead_Montly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check Override if you want to Override the &quot;Number of Leads Required&quot; in any one particular month</inlineHelpText>
        <label>Override the Number of Leads Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Leads_Recieved_Target_Monthly__c</fullName>
        <formula>Consultant_Target_Lead_Achieved__c /  Consultant_Leads_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Leads Recieved Target (Monthly)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Individual Cons. Lead Setup (Monthly)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Consultant_Role__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Consultant_Target_Lead_Achieved__c</columns>
        <columns>Consultant_Leads_Target__c</columns>
        <columns>of_Leads_Recieved_Target_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2019</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Consultant_Role__c</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Consultant_Target_Lead_Achieved__c</columns>
        <columns>Consultant_Leads_Target__c</columns>
        <columns>of_Leads_Recieved_Target_Monthly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>2019</label>
    </listViews>
    <nameField>
        <displayFormat>CTLM-{00000000}</displayFormat>
        <label>ID - Indiv. Cons. Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Cons. Lead Setup (Monthly)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>